# django-admin-customize-challenge

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  start.sh
config/: settings.py  urls.py
web/: admin.py  forms.py  models.py
web/management/commands/: make_dummy_data.py  query_dummy_data.py
web/migrations/: 0001_initial.py
